--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+<!--This is the main css file containing styling for all the html pages-->
+
 .header{
     overflow: hidden;
     background-color:antiquewhite ; 
